adding index file

--- a/google/index.html
+++ b/google/index.html
@@ -1,1 +1,22 @@
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Google</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
+</head>
+<body>
 
+<a class="gb_P" data-pid="23" href="https://mail.google.com/mail/?tab=wm">Gmail</a>
+
+
+<a class="gb_P" data-pid="2" href="https://www.google.co.in/imghp?hl=en&amp;tab=wi">Images</a>
+
+
+<img src="logo.png" alt="Google" width="21%" height="21%">\
+<div id="search">
+	
+</div>
+
+
+</body>
+</html>
